# py-arbitrage

./: .gitignore  pyproject.toml
src/py_arbitrage/: entry.py
src/py_arbitrage/binance_ext/: __init__.py
src/py_arbitrage/binance_ext/future/: __init__.py  market.py
tests/: test_py_arbitrage.py
